# GRPropa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: ICS-CMB.txt  ICS-CRB_ARCADE2.txt  ICS-CRB_Protheroe96.txt  ICS-EBL_Dominguez11.txt  ICS-EBL_Dominguez11_LL.txt  ICS-EBL_Dominguez11_UL.txt  ICS-EBL_Finke10.txt  ICS-EBL_Franceschini08.txt  ICS-EBL_Gilmore12.txt  ICS-EBL_Kneiske10.txt  PP-CMB.txt  PP-CRB_ARCADE2.txt  PP-CRB_Protheroe96.txt  PP-EBL_Dominguez11.txt  PP-EBL_Dominguez11_LL.txt  PP-EBL_Dominguez11_UL.txt  PP-EBL_Finke10.txt  PP-EBL_Franceschini08.txt  PP-EBL_Gilmore12.txt  PP-EBL_Kneiske10.txt  PairProdMFP-old.txt  photonProbabilities-CMB.txt  photonProbabilities-CRB_ARCADE2.txt  photonProbabilities-CRB_Protheroe96.txt  photonProbabilities-EBL_Dominguez11.txt  photonProbabilities-EBL_Dominguez11_LL.txt  photonProbabilities-EBL_Dominguez11_UL.txt  photonProbabilities-EBL_Dominguez11_lower.txt  photonProbabilities-EBL_Dominguez11_upper.txt  photonProbabilities-EBL_Finke10.txt  photonProbabilities-EBL_Franceschini08.txt  photonProbabilities-EBL_Gilmore12.txt  photonProbabilities-EBL_Kneiske10.txt
include/grpropa/: Candidate.h  Clock.h  Common.h  Cosmology.h  Grid.h  GridTools.h  Module.h  ModuleList.h  ParticleState.h  PhotonBackground.h  ProgressBar.h  Random.h  Referenced.h  Source.h  Units.h  Vector3.h
include/grpropa/magneticField/: AMRMagneticField.h  GalacticMagneticField.h  JF12Field.h  MagneticField.h  MagneticFieldGrid.h  TurbulentMagneticField.h
include/grpropa/module/: Boundary.h  BreakCondition.h  InverseCompton.h  Observer.h  Output.h  OutputShell.h  OutputTXT.h  PairProduction.h  PropagationCK.h  Redshift.h  SimplePropagation.h  Synchrotron.h  TextOutput.h  Tools.h
python/: grpropa.i
python/grpropa/: __init__.py
src/: Candidate.cpp  Clock.cpp  Common.cpp  Cosmology.cpp  GridTools.cpp  Module.cpp  ModuleList.cpp  ParticleState.cpp  PhotonBackground.cpp  ProgressBar.cpp  Random.cpp  Source.cpp
src/magneticField/: JF12Field.cpp  MagneticField.cpp  MagneticFieldGrid.cpp  TurbulentMagneticField.cpp
src/module/: Boundary.cpp  BreakCondition.cpp  InverseCompton.cpp  Observer.cpp  Output.cpp  OutputShell.cpp  OutputTXT.cpp  PairProduction.cpp  PropagationCK.cpp  Redshift.cpp  SimplePropagation.cpp  Synchrotron.cpp  TextOutput.cpp  Tools.cpp
